[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-storage"
version = "0.1.0"
description = "Persistence layer for pyfarm — StorageBackend protocol, SQLite and null backends."
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core>=0.1.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
